--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
   </head>
   <body>
     <div class="container">
+      <a class="forzuri" href="https://github.com/JOSEPHOMOTOSHO/my-cv-portfolio">CLICK TO OPEN MY REPOSITORY</a>
+
       <div class="top">
         <h1>OMOTOSHO JOSEPH ADEYEMI</h1>
         <h4>Port Harcourt, Rivers State, Nigeria</h4>
@@ -177,6 +179,11 @@
         </div>
         </div>
       </div>
+      <div class="forzuri">
+      <a  href="https://github.com/JOSEPHOMOTOSHO/my-cv-portfolio">CLICK TO OPEN MY REPOSITORY</a>
+      </div>
+      
     </div>
+    
   </body>
 </html>
